:lipstick: #1798 - fix: fix text overflow on labels.

--- a/src/open_inwoner/scss/components/File/File.scss
+++ b/src/open_inwoner/scss/components/File/File.scss
@@ -34,6 +34,12 @@
     flex-direction: column;
   }
 
+  &__data > * {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+  }
+
   &__file .link,
   &__file .p {
     padding: var(--spacing-large);
